bk_ida/gccida/c2/simplify_giv_expr
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6871:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v18; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6875:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v22; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6876:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6877:4: error: expected ';' after expression
rtx v24; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6877:5: error: use of undeclared identifier 'v24'
rtx v24; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6878:4: error: expected ';' after expression
rtx v25; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6878:5: error: use of undeclared identifier 'v25'
rtx v25; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6880:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6880:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6882:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6893:6: error: use of undeclared identifier 'v40'
rtx *v40; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6896:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v43; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6897:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v44; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6899:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6899:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6902:4: error: expected ';' after expression
rtx v49; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6902:5: error: use of undeclared identifier 'v49'
rtx v49; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6904:4: error: expected ';' after expression
rtx v51; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/loop.c:6904:5: error: use of undeclared identifier 'v51'
rtx v51; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_giv_expr/src/obj/loop.o] Error 1
